--- a/report/project_report.tex
+++ b/report/project_report.tex
@@ -48,7 +48,7 @@
   linkcolor=black,
   urlcolor=blue,
   citecolor=black,
-  pdfauthor={<Your Name>},
+  pdfauthor={Riccardo Pitzanti & Federico Iannini},
   pdftitle={Serverless Named Entity Recognition on AWS Lambda},
   pdfsubject={Cloud Computing Project Report},
   pdfkeywords={AWS Lambda, API Gateway, SAM, spaCy, NER, Serverless, CloudWatch, Locust}
@@ -68,48 +68,6 @@
 }
 \lstset{style=code}
 
-\makeatletter
-\let\orig@includegraphics\includegraphics
-\renewcommand{\includegraphics}[2][]{%
-  \begingroup
-    \def\imgfile{#2}%
-    % Locust - Charts
-    \IfSubStr{\imgfile}{Charts}{%
-      \orig@includegraphics[width=.55\linewidth]{#2}%
-    }{%
-      % Locust - Stats
-      \IfSubStr{\imgfile}{Stats}{%
-        \orig@includegraphics[width=.45\linewidth]{#2}%
-      }{%
-        % Lambda metrics
-        \IfSubStr{\imgfile}{Duration}{%
-          \orig@includegraphics[width=.70\linewidth]{#2}%
-        }{%
-          \IfSubStr{\imgfile}{Invocation}{%
-            \orig@includegraphics[width=.70\linewidth]{#2}%
-          }{%
-            \IfSubStr{\imgfile}{Invocations}{%
-              \orig@includegraphics[width=.70\linewidth]{#2}%
-            }{%
-              \IfSubStr{\imgfile}{Concurrent}{%
-                \orig@includegraphics[width=.70\linewidth]{#2}%
-              }{%
-                \IfSubStr{\imgfile}{ConcEx}{%
-                  \orig@includegraphics[width=.70\linewidth]{#2}%
-                }{%
-                  % default
-                  \orig@includegraphics[width=\linewidth]{#2}%
-                }%
-              }%
-            }%
-          }%
-        }%
-      }%
-    }%
-  \endgroup
-}
-\makeatother
-
 \title{\vspace{-1.5em}\Large\bfseries Serverless Named Entity Recognition on AWS Lambda}
 \author{Riccardo Pitzanti - 1947877 \quad \quad \quad \quad Federico Iannini - 1931748\\
   \normalsize pitzanti.1947877@studenti.uniroma1.it \quad iannini.1931748@studenti.uniroma1.it\\[0.25em]
@@ -121,7 +79,7 @@
 \vspace{-1.5em}
 
 \section{Introduction}
-This work explores the application of a production-ready NLP pipeline for Named Entity Recognition (NER) on AWS Lambda. By leveraging AWS Lambda and Amazon API Gateway, we architect a microservice that is inherently scalable. The implementation utilizes the spaCy library, whilst the entire application stack—including compute, API management, and security—is defined and deployed using the AWS Serverless Application Model (SAM).
+This work explores the application of a production-ready NLP pipeline for Named Entity Recognition (NER) on AWS Lambda. By leveraging AWS Lambda and Amazon API Gateway, we architect a microservice that is inherently scalable. The implementation utilizes the spaCy library, whilst the entire application stack (including compute, API management, and security) is defined and deployed using the AWS Serverless Application Model (SAM).
 
 The primary objective of this study is to design and evaluate the performance characteristics of this service under varied load conditions. We employ Locust, an open-source load-testing tool, to simulate traffic patterns. The findings confirm the viability of serverless architectures for deploying microservices.
 
@@ -270,13 +228,11 @@ Pre-spike \SI{30}{s} at 2 users, spike to 10 users for \SI{240}{s}, then \SI{60}
 
 \subsection{Extra: Stress test scenario}
 The decision to conduct a stress test, even with the known constraint of the AWS Learner Lab's resource limits, was a calculated one aimed at challenging the boundaries of the serverless architecture. While the used account was eventually suspended for exceeding its concurrency quota (10 concurrent executions), the outcome itself was a valuable data point. Crucially, the client-side metrics collected by Locust prior to the suspension were preserved. However, CloudWatch metrics were not available after the run, due to the account's suspension. The stress test scenario was therefore executed with a shortened 3-minute window to probe headroom while staying within budget.
-\paragraph{Test composition and outcome (\emph{Very Heavy A} “\texttt{hhA}”).}
-To probe headroom beyond the Heavy envelope, we executed a more aggressive variant of scenario~A using the settings captured in \texttt{hhA - Charts.png} and \texttt{hhA - Stats.png}. Warm-up was shortened and the active user pool enlarged to drive a higher arrival rate while keeping per-user think time minimal.
 
 \begin{table}[h]
 \centering
 \small
-\caption{Test composition for the \emph{Very Heavy A} (\texttt{hhA}) stress run.}
+\caption{Test composition for the stress test run.}
 \label{tab:hhA-plan}
 \begin{tabular}{llccc}
 \toprule
@@ -288,30 +244,6 @@ Main window  & 180\,s & 40 (steady plateau) & rapid climb after WU & $\approx$0-
 \end{tabular}
 \end{table}
 
-\noindent\textbf{Observed outcome (Locust).}
-From the \texttt{hhA} charts/stats:
-(i) sustained throughput at $\sim$60--70\,req/s across the steady window with \emph{zero failures};
-(ii) latency stabilizes after the brief WU spike with p50 $\approx$ 0.64\,s and p95 $\approx$ 0.73\,s;
-(iii) a single max-latency outlier around $\sim$6.9\,s occurs at the transition and does not persist in steady state.
-Given the 180\,s main window, this corresponds to roughly $1.1\times 10^4$--$1.3\times 10^4$ successful requests in steady state.
-
-\begin{table}[h]
-\centering
-\small
-\caption{Summary metrics for \texttt{hhA} (from \texttt{hhA - Stats.png}/\texttt{hhA - Charts.png}).}
-\label{tab:hhA-metrics}
-\begin{tabular}{lcccccc}
-\toprule
-Window & Plateau RPS & Failures & p50 (s) & p95 (s) & Max (s) & Notes \\
-\midrule
-180\,s (steady) & $\sim$60--70 & 0 & 0.64 & 0.73 & $\sim$6.9 & single outlier at transition \\
-\bottomrule
-\end{tabular}
-\end{table}
-
-\noindent\textbf{Interpretation.}
-Despite the learner-lab concurrency ceiling and the shortened window, the client-side evidence indicates the system absorbed the higher arrival rate without degradation in the steady segment: throughput rose with load, medians remained low, and tails stayed bounded aside from the expected warm-up/transition blip. As noted above, CloudWatch provider-side series are unavailable post-run due to account suspension, so conclusions for \texttt{hhA} rest on the preserved Locust artifacts.
-
 \section{Results and discussion}
 % OK part
 The primary objective of this evaluation is to assess whether the system under study maintains its service quality under stress conditions. 
@@ -319,10 +251,10 @@ Before examining the results, it is useful to clarify how the reported charts an
 Complementing these charts, the Locust request statistics provide aggregated values of latency percentiles, request counts, and possible failures, thereby allowing the tails of the latency distribution and the presence or absence of execution errors to be assessed at a glance. On the provider side, the AWS Lambda metrics add further explanatory depth. The \emph{Invocations} series tracks the cumulative number of requests served, where a linear slope corresponds to constant throughput. The \emph{ConcurrentExecutions} metric shows the number of function instances active at a given moment, thus making concurrency ceilings and the elasticity of scaling behavior visible. The \emph{Duration} series measures execution time per invocation, with narrow and stable bands signifying predictable performance and wider fluctuations revealing potential variability. 
 
 % Not OK part (replaced)
-Our reading of the experiments is two-sided and evidence-led. First, we \emph{cross-check throughput} by comparing Locust RPS with the slope of CloudWatch \emph{Invocations}; the two match in shape and level during steady windows, confirming that client-side and provider-side views are consistent. Second, we \emph{validate elasticity} by verifying that \emph{ConcurrentExecutions} rises and falls with the arrival rate (bursts, ramps, and spikes) and returns to baseline after load drops, indicating healthy scale-out/scale-in. Third, we \emph{bound latency} using Locust percentiles: p50 captures the typical user experience, while p95/p99 quantify tail behavior; brief transitions (ramp steps and spikes) are assessed separately from steady windows. Finally, we \emph{scan for stress signals}—failures in Locust, and visual cues of throttling or saturation in CloudWatch (e.g., a flat concurrency ceiling or diverging RPS vs.\ invocations). This procedure removes ambiguity between client pacing and backend capacity and ties each conclusion to a specific metric.
+Our reading of the experiments is two-sided and evidence-led. First, we cross-check throughput by comparing Locust RPS with the slope of CloudWatch \emph{Invocations}; the two match in shape and level during steady windows, confirming that client-side and provider-side views are consistent. Second, we validate elasticity by verifying that \emph{ConcurrentExecutions} rises and falls with the arrival rate (bursts, ramps, and spikes) and returns to baseline after load drops, indicating healthy scale-out/scale-in. Third, we bound latency using Locust percentiles: p50 captures the typical user experience, while p95/p99 quantify tail behavior; brief transitions (ramp steps and spikes) are assessed separately from steady windows. Finally, we scan for stress signals: failures in Locust, and visual cues of throttling or saturation in CloudWatch (e.g., a flat concurrency ceiling or diverging RPS vs.\ invocations).
 
 % Not OK part (replaced)
-Across all shapes, the service sustains steady throughput with low median latency and bounded tails, without recorded request failures. In the \textbf{Heavy} profile, Locust reports \(\text{RPS} \in [23.06, 30.72]\) with scenario medians p50 \(=170\text{--}180\,\mathrm{ms}\) and p95 \(=390\text{--}580\,\mathrm{ms}\) (p99 \(=840\text{--}1100\,\mathrm{ms}\)); the highest observed steady-state throughput is \(\mathbf{30.72}\,\mathrm{req/s}\) in Heavy~A (bursty). In the \textbf{Light} profile, throughput spans \(\text{RPS} \in [17.90, 22.01]\) with p50 \(=170\text{--}330\,\mathrm{ms}\), p95 \(=370\text{--}480\,\mathrm{ms}\), and p99 \(\le 500\,\mathrm{ms}\). Max latencies of \(4\text{--}5\,\mathrm{s}\) appear as rare outliers that coincide with abrupt fan-out (spikes/step-ups), a pattern consistent with cold starts rather than sustained saturation. CloudWatch corroborates these patterns: \emph{ConcurrentExecutions} traces mirror the input shapes (bursts, ramps, spikes), \emph{Invocations} grow linearly during steady windows (constant effective throughput), and \emph{Duration} bands remain tight once warm. No evidence of a hard concurrency ceiling or plateaued throughput is visible in any scenario, which supports the conclusion that the application scales elastically within the tested load envelope.
+Across all shapes, the service sustains steady throughput with low median latency and bounded tails, without recorded request failures. In the heavy profile, Locust reports \(\text{RPS} \in [23.06, 30.72]\) with scenario medians p50 \(=170\text{--}180\,\mathrm{ms}\) and p95 \(=390\text{--}580\,\mathrm{ms}\) (p99 \(=840\text{--}1100\,\mathrm{ms}\)); the highest observed steady-state throughput is 30.72 req/s in Heavy~A (bursty). In the light profile, throughput spans \(\text{RPS} \in [17.90, 22.01]\) with p50 \(=170\text{--}330\,\mathrm{ms}\), p95 \(=370\text{--}480\,\mathrm{ms}\), and p99 \(\le 500\,\mathrm{ms}\). Max latencies of \(4\text{--}5\,\mathrm{s}\) appear as rare outliers that coincide with abrupt fan-out (spikes/step-ups), a pattern consistent with cold starts rather than sustained saturation. CloudWatch corroborates these patterns: \emph{ConcurrentExecutions} traces mirror the input shapes (bursts, ramps, spikes), \emph{Invocations} grow linearly during steady windows (constant effective throughput), and \emph{Duration} bands remain tight once warm. No evidence of a hard concurrency ceiling or plateaued throughput is visible in any scenario, which supports the conclusion that the application scales elastically within the tested load envelope.
 
 % OK part
 The RU/S/RD structure in B and the transient spike in C produce brief, expected percentile spikes at transitions; the system stabilizes quickly in the steady segment with no persistent oscillations.
@@ -334,65 +266,64 @@ We evaluated a serverless NER API on AWS Lambda behind API Gateway using three c
 Within the tested limits, the architecture \emph{scales accordingly and efficiently}: throughput increases with client concurrency, latency remains controlled and predictable after warm-up, and vertical scaling via memory provides a clear performance uplift when needed. The system shows no anomalous behavior under bursty, ramped, or spiky demand, and maintains zero-failure operation at the highest tested loads (stress test).
 Future work could focus on refining both the scalability experiments and the methodology for measurement. On the experimental side, one direction could be to extend the range of load profiles beyond the canonical shapes used in this work or to explore other workload patterns. On the methodological side, we could investigate the impact of different client-side configurations on the observed behavior, such as varying think times or concurrency levels.
 
-\scenariofig{figures/hA - Charts.png}{Heavy A — Locust RPS and latency percentiles.}{fig:ha-charts}
-\scenariofig{figures/hA - Stats.png}{Heavy A — Locust request statistics.}{fig:ha-stats}
-\scenariofig{figures/hA - Invocations.png}{Heavy A — Lambda Invocations (provider-side throughput).}{fig:ha-invocations}
-\scenariofig{figures/hA - ConcEx.png}{Heavy A — Lambda ConcurrentExecutions (elastic scale-out/in).}{fig:ha-conc}
-\scenariofig{figures/hA - Durations.png}{Heavy A — Lambda Duration per invocation.}{fig:ha-duration}
+\section{Charts and statistics}
+In the next pages, we present the charts and statistics for each scenario. In order, we present the following: light tests (A, B, C), heavy tests (A, B, B with lower memory, C), and the stress test (A). The test naming and the letters used to identify the scenarios are defined in the \texttt{Workload scenarios} subsection.
 
-% hB
-\scenariofig{figures/hB - Charts.png}{Heavy B — Locust RPS and latency percentiles.}{fig:hb-charts}
-\scenariofig{figures/hB - Stats.png}{Heavy B — Locust request statistics.}{fig:hb-stats}
-\scenariofig{figures/hB - Invocations.png}{Heavy B — Lambda Invocations (provider-side throughput).}{fig:hb-invocations}
-\scenariofig{figures/hB - ConcEx.png}{Heavy B — Lambda ConcurrentExecutions (elastic scale-out/in).}{fig:hb-conc}
-\scenariofig{figures/hB - Duration.png}{Heavy B — Lambda Duration per invocation.}{fig:hb-duration}
+\clearpage
 
-% hBl (Heavy B, low-memory/variant)
-\scenariofig{figures/hBl - Charts.png}{Heavy B (low) — Locust RPS and latency percentiles.}{fig:hbl-charts}
-\scenariofig{figures/hBl - Stats.png}{Heavy B (low) — Locust request statistics.}{fig:hbl-stats}
-\scenariofig{figures/hBl - Invocations.png}{Heavy B (low) — Lambda Invocations.}{fig:hbl-invocations}
-\scenariofig{figures/hBl - ConcEx.png}{Heavy B (low) — Lambda ConcurrentExecutions.}{fig:hbl-conc}
-\scenariofig{figures/hBl - Duration.png}{Heavy B (low) — Lambda Duration per invocation.}{fig:hbl-duration}
-
-% hC
-\scenariofig{figures/hC - Charts.png}{Heavy C — Locust RPS and latency percentiles.}{fig:hc-charts}
-\scenariofig{figures/hC - Stats.png}{Heavy C — Locust request statistics.}{fig:hc-stats}
-\scenariofig{figures/hC - Invocations.png}{Heavy C — Lambda Invocations.}{fig:hc-invocations}
-\scenariofig{figures/hC - ConcEx.png}{Heavy C — Lambda ConcurrentExecutions.}{fig:hc-conc}
-\scenariofig{figures/hC - Duration.png}{Heavy C — Lambda Duration per invocation.}{fig:hc-duration}
-
-% =========================
-% Insert these two figures INSIDE your existing
-% \subsection{Extra: Stress test scenario} — right after the paragraph you provided
-% =========================
-\scenariofig{figures/hhA - Charts.png}{Very Heavy A (stress) — Locust RPS and latency percentiles.}{fig:hha-charts}
-\scenariofig{figures/hhA - Stats.png}{Very Heavy A (stress) — Locust request statistics.}{fig:hha-stats}
-
-% =========================
-% Insert AFTER the stress-test subsection
-% =========================
-
-% ---- LIGHT scenarios (A, B, C) ----
-% lA (note the filename 'ConcExecutions.png')
-\scenariofig{figures/lA - Charts.png}{Light A — Locust RPS and latency percentiles.}{fig:la-charts}
-\scenariofig{figures/lA - Stats.png}{Light A — Locust request statistics.}{fig:la-stats}
+% lA
+\scenariofig[0.8\textwidth]{figures/lA - Charts.png}{Light A — Locust RPS and latency percentiles.}{fig:la-charts}
+\scenariofig[0.9\textwidth]{figures/lA - Stats.png}{Light A — Locust request statistics.}{fig:la-stats}
 \scenariofig{figures/lA - Invocations.png}{Light A — Lambda Invocations.}{fig:la-invocations}
-\scenariofig{figures/lA - ConcExecutions.png}{Light A — Lambda ConcurrentExecutions.}{fig:la-conc}
+\scenariofig[0.9\textwidth]{figures/lA - ConcExecutions.png}{Light A — Lambda ConcurrentExecutions.}{fig:la-conc}
 \scenariofig{figures/lA - Duration.png}{Light A — Lambda Duration per invocation.}{fig:la-duration}
 
 % lB
-\scenariofig{figures/lB - Charts.png}{Light B — Locust RPS and latency percentiles.}{fig:lb-charts}
-\scenariofig{figures/lB - Stats.png}{Light B — Locust request statistics.}{fig:lb-stats}
+\scenariofig[0.8\textwidth]{figures/lB - Charts.png}{Light B — Locust RPS and latency percentiles.}{fig:lb-charts}
+\scenariofig[0.9\textwidth]{figures/lB - Stats.png}{Light B — Locust request statistics.}{fig:lb-stats}
 \scenariofig{figures/lB - Invocations.png}{Light B — Lambda Invocations.}{fig:lb-invocations}
 \scenariofig{figures/lB - ConcEx.png}{Light B — Lambda ConcurrentExecutions.}{fig:lb-conc}
 \scenariofig{figures/lB - Duration.png}{Light B — Lambda Duration per invocation.}{fig:lb-duration}
 
 % lC
-\scenariofig{figures/lC - Charts.png}{Light C — Locust RPS and latency percentiles.}{fig:lc-charts}
-\scenariofig{figures/lC - Stats.png}{Light C — Locust request statistics.}{fig:lc-stats}
+\scenariofig[0.8\textwidth]{figures/lC - Charts.png}{Light C — Locust RPS and latency percentiles.}{fig:lc-charts}
+\scenariofig[0.9\textwidth]{figures/lC - Stats.png}{Light C — Locust request statistics.}{fig:lc-stats}
 \scenariofig{figures/lC - Invocations.png}{Light C — Lambda Invocations.}{fig:lc-invocations}
 \scenariofig{figures/lC - ConcEx.png}{Light C — Lambda ConcurrentExecutions.}{fig:lc-conc}
 \scenariofig{figures/lC - Duration.png}{Light C — Lambda Duration per invocation.}{fig:lc-duration}
+
+% hA
+\scenariofig[0.8\textwidth]{figures/hA - Charts.png}{Heavy A — Locust RPS and latency percentiles.}{fig:ha-charts}
+\scenariofig[0.9\textwidth]{figures/hA - Stats.png}{Heavy A — Locust request statistics.}{fig:ha-stats}
+\scenariofig{figures/hA - Invocations.png}{Heavy A — Lambda Invocations (provider-side throughput).}{fig:ha-invocations}
+\scenariofig{figures/hA - ConcEx.png}{Heavy A — Lambda ConcurrentExecutions (elastic scale-out/in).}{fig:ha-conc}
+\scenariofig{figures/hA - Durations.png}{Heavy A — Lambda Duration per invocation.}{fig:ha-duration}
+
+% hB
+\scenariofig[0.8\textwidth]{figures/hB - Charts.png}{Heavy B — Locust RPS and latency percentiles.}{fig:hb-charts}
+\scenariofig[0.9\textwidth]{figures/hB - Stats.png}{Heavy B — Locust request statistics.}{fig:hb-stats}
+\scenariofig{figures/hB - Invocations.png}{Heavy B — Lambda Invocations (provider-side throughput).}{fig:hb-invocations}
+\scenariofig{figures/hB - ConcEx.png}{Heavy B — Lambda ConcurrentExecutions (elastic scale-out/in).}{fig:hb-conc}
+\scenariofig{figures/hB - Duration.png}{Heavy B — Lambda Duration per invocation.}{fig:hb-duration}
+
+% hBl (Heavy B, low-memory/variant)
+\scenariofig[0.8\textwidth]{figures/hBl - Charts.png}{Heavy B (low memory) — Locust RPS and latency percentiles.}{fig:hbl-charts}
+\scenariofig[0.9\textwidth]{figures/hBl - Stats.png}{Heavy B (low memory) — Locust request statistics.}{fig:hbl-stats}
+\scenariofig{figures/hBl - Invocations.png}{Heavy B (low memory) — Lambda Invocations.}{fig:hbl-invocations}
+\scenariofig{figures/hBl - ConcEx.png}{Heavy B (low memory) — Lambda ConcurrentExecutions.}{fig:hbl-conc}
+\scenariofig{figures/hBl - Duration.png}{Heavy B (low memory) — Lambda Duration per invocation.}{fig:hbl-duration}
+
+% hC
+\scenariofig[0.8\textwidth]{figures/hC - Charts.png}{Heavy C — Locust RPS and latency percentiles.}{fig:hc-charts}
+\scenariofig[0.9\textwidth]{figures/hC - Stats.png}{Heavy C — Locust request statistics.}{fig:hc-stats}
+\scenariofig{figures/hC - Invocations.png}{Heavy C — Lambda Invocations.}{fig:hc-invocations}
+\scenariofig{figures/hC - ConcEx.png}{Heavy C — Lambda ConcurrentExecutions.}{fig:hc-conc}
+\scenariofig{figures/hC - Duration.png}{Heavy C — Lambda Duration per invocation.}{fig:hc-duration}
+
+\scenariofig[0.8\textwidth]{figures/hhA - Charts.png}{Stress Test — Locust RPS and latency percentiles.}{fig:hha-charts}
+\scenariofig[0.9\textwidth]{figures/hhA - Stats.png}{Stress Test — Locust request statistics.}{fig:hha-stats}
+
+\clearpage
 
 \begin{thebibliography}{9}
 \bibitem{spacy}
